--- a/style.css
+++ b/style.css
@@ -4,15 +4,47 @@
     margin-top: 50px;
   }
   
-  .card {
+/* Card container styling */
+.card {
     display: inline-block;
-    width: 100px;
-    height: 150px;
-    border: 1px solid #000;
+    width: 120px;
+    height: 160px;
+    border: 1px solid #525252;
+    background-color: #fff;
     margin: 10px;
-    line-height: 150px;
-    font-size: 24px;
+    position: relative;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
   }
+  
+  /* Center the shape within the card */
+  .shape {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80px;
+    height: 80px;
+  }
+  
+  /* Define the shapes */
+  .red-circle {
+    background-color: red;
+    border-radius: 50%;
+  }
+  
+  .blue-square {
+    background-color: blue;
+  }
+  
+  .blue-circle {
+    background-color: blue;
+    border-radius: 50%;
+  }
+  
+  .red-square {
+    background-color: red;
+  }
+  
   
   #instruction {
     margin-top: 20px;
