--- a/style.css
+++ b/style.css
@@ -1,51 +1,56 @@
-/* Basic styles */
+/* Basic layout */
 #gameArea {
-    text-align: center;
-    margin-top: 50px;
-  }
-  
-/* Card container styling */
+  text-align: center;
+  margin-top: 50px;
+}
+
+/* Reference cards container */
+#referenceCards {
+  margin-bottom: 20px;
+}
+
+/* Card styling */
 .card {
-    display: inline-block;
-    width: 120px;
-    height: 160px;
-    border: 1px solid #525252;
-    background-color: #fff;
-    margin: 10px;
-    position: relative;
-    box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
-  }
+  display: inline-block;
+  width: 120px;
+  height: 160px;
+  border: 1px solid #525252;
+  background-color: #fff;
+  margin: 10px;
+  position: relative;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
+}
+
+/* Center the shape inside a card */
+.shape {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80px;
+  height: 80px;
+}
+
+/* Shape/color classes */
+.red-circle {
+  background-color: red;
+  border-radius: 50%;
+}
+
+.blue-square {
+  background-color: blue;
+}
+
+.blue-circle {
+  background-color: blue;
+  border-radius: 50%;
+}
+
+.red-square {
+  background-color: red;
+}
   
-  /* Center the shape within the card */
-  .shape {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80px;
-    height: 80px;
-  }
-  
-  /* Define the shapes */
-  .red-circle {
-    background-color: red;
-    border-radius: 50%;
-  }
-  
-  .blue-square {
-    background-color: blue;
-  }
-  
-  .blue-circle {
-    background-color: blue;
-    border-radius: 50%;
-  }
-  
-  .red-square {
-    background-color: red;
-  }
-  
-  
-  #instruction {
-    margin-top: 20px;
-  }
+#instruction {
+  margin-top: 20px;
+  font-size: 1.2em;
+}
